# lyrica

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  README_CN.md  audacious-desktop-lyrics.desktop  audacious-lyricsd.service  build_plasmoid.sh  go.mod  go.sum  main.go
AudaciousLyricsQML/: CMakeLists.txt  main.cpp  main.qml
config/: config.go
docs/: BUILD.md  LYRIC_PROVIDERS.md  LYRIC_PROVIDERS.zh.md
examples/: lyrica_obs_plugin.py
lyric_parser/: lyric_parser.go
lyric_providers/: base.go  file.go  netease.go  yesplaymusic.go
misc/: plasma-desktop-lyrics.service
mpris/: mpris.go
plasmoid/: metadata.json
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: configBackend.qml  configFrontend.qml  configGeneral.qml  main.qml
src/: config.rs  lyric_parser.rs  lyric_providers.rs  main.rs  player.rs  player_stream.rs  web_routes.rs  websocket.rs
src/lyric_providers/: feeluown_netease.rs  file.rs  mpris2_text.rs  netease.rs  netease_gtk4.rs  netease_trackid.rs  yesplaymusic.rs
src/web_routes/: config.rs  test_page.rs
types/: types.go
